# new-covscript

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compiler/antlr/runtime/src/support/: definitions.h
compiler/antlr/runtime/src/tree/: ParseTree.h  ParseTreeVisitor.h
compiler/benchmarks/: bench-bytebuffer.cpp  bench-copy.cpp
compiler/grammar/: CovScript.g4
compiler/include/covscript/compiler/: bytebuffer.h  callState.h  callState.hpp  compiler.h  compiler.hpp  compilerTypes.h  file.h  function.h  parser.h  parser.hpp  scope.h  scope.hpp  sharedTypes.h  sharedTypes.hpp  typeDeduce.hpp  types.h  variable.h  variable.hpp
compiler/include/covscript/compiler/asm/: CodeWriter.h  codeWriter.hpp
compiler/include/covscript/compiler/cfg/: controlFlowGraph.hpp
compiler/include/covscript/compiler/phase/: assembleDefine.h  assembleDefine.hpp  assembleScan.h  assembleScan.hpp
compiler/include/covscript/compiler/utils/: bytebuffer.hpp  unicode.h
compiler/runtime/src/: Parser.cpp  antlr4-runtime.h
compiler/runtime/src/support/: Any.cpp
compiler/runtime/src/tree/: ErrorNodeImpl.h
compiler/src/: main.cpp
compiler/src/covscript/compiler/: bytebuffer.cpp  compiler.cpp  formatting.cpp  parser.cpp  scope.cpp  typeDeduce.cpp  unicode.cpp  variable.cpp
compiler/src/covscript/compiler/phase/: assembleDefine.cpp  assembleScan.cpp
compiler/src/covscript/compiler/utils/: bytebuffer.cpp  unicode.cpp
compiler/tests/: csbuild.csc4  hello.csc4  syntaxError.csc4  test-bytebuffer.cpp  test-exprdeduce.cpp  test-typededuce.cpp  test-typeflags.cpp
exp_vm/: vm.cpp  vm.hpp
parser/grammar/: CovScript.g4
parser/include/covscript/compiler/: file.h  parser.h
runtime/: any.hpp  exception.hpp  memory.hpp  utility.hpp  vm_instance.hpp  vm_type.hpp
runtime/include/covscript/runtime/: vm_instance.hpp
runtime/src/: dummy.cpp
shared/: any.hpp  memory.hpp
shared/benchmarks/: BenchmarkHelper.h  bench-any.cpp
shared/include/covscript/shared/: any.hpp  exception.hpp  memory.hpp  shared_types.hpp  utility.hpp  vm_type.hpp
shared/src/: bench_any.cpp  definitions.cpp  test_any.cpp
shared/tests/: test-any.cpp
